--- a/app/mobile/src/main/res/values/strings.xml
+++ b/app/mobile/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Ikea</string>
+    <string name="app_name">Göra</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
@@ -7,9 +7,34 @@
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
 
+    <string name="action_signout">Sign out</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_revoke">Revoke</string>
+    <string name="circles_title">Visible circles:</string>
+    <string name="sign_out_button_name">Sign out</string>
+    <string name="revoke_access_button_name">Revoke</string>
+    <string name="status_sign_in_required">Sign-in required</string>
+    <string name="status_sign_in_error">Error signing in: %s</string>
+    <string name="status_loading">Loading…</string>
+    <string name="status_signing_in">Signing in with Google+…</string>
+    <string name="status_signed_out"></string>
+    <string name="status_revoke_access">Revoked access</string>
+    <string name="status_revoke_access_error">Error revoking access: %s</string>
+    <string name="signed_in_as">Signed in as %s</string>
+
+    <!-- Used if there was an error loading the signed in user's name. -->
+    <string name="unknown_person">Unknown</string>
+    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
+    <string name="close">Close</string>
+    <string name="profile_picture">User\'s profile picture.</string>
+    <string name="title_activity_main_">MDP</string>
+    <string name="ok">OK</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+
     <!--<string name="nav_item_devices">Devices</string>-->
     <!--<string name="nav_item_remote">Remote</string>-->
-    <string name="nav_item_configuration">Configuration</string>
+    <string name="nav_item_configuration">Dashboard</string>
     <string name="nav_item_about">About</string>
 
     <!-- navigation drawer item labels  -->
@@ -29,7 +54,7 @@
 
     <!--<string name="title_devices">Devices</string>-->
     <!--<string name="title_remote">Remote</string>-->
-    <string name="title_configuration">Configuration</string>
+    <string name="title_configuration">Dashboard</string>
     <string name="title_about">About</string>
 
 <!-- TODO: Remove or change this placeholder text -->
